the editor still complains, but  its invalid.

--- a/src/components/General.astro
+++ b/src/components/General.astro
@@ -415,4 +415,4 @@ if (validation.success) {
 
   
 )}
-{(general === null) && (<span>No General Retrieved</span>)}
+{(general === undefined) && (<span>No General Retrieved</span>)}
