--- a/src/components/General.astro
+++ b/src/components/General.astro
@@ -119,15 +119,19 @@ if (validation.success) {
     if (notes.success) {
         const mydata: generalNoteType[] = notes.data;
         if (notes.data !== undefined && notes.data !== null && notes.data.length >= 1) {
-            usageNotes = usageNotes + mydata.map((note) => {
+            const result = mydata.map((note) => {
                 return `
-           <sp-banner class="not-content" type=${severity[note.severity]()} client:only>
-             <div slot="header">General Usage Note</div>
-             <div slot="content">
-               ${note.text}
-             </div>
-           </sp-banner><br/>`
+                    <sp-banner class="not-content" type=${severity[note.severity]()} client:only>
+                        <div slot="header">General Usage Note</div>
+                        <div slot="content">
+                            ${note.text}
+                        </div>
+                    </sp-banner><br/>
+                    `;
             })
+            if(result !== null && result !== undefined) {
+                result.forEach(r => usageNotes = usageNotes.concat(r))
+            }
         }
     }
     collectionArray = await getCollection('generalConflictData');
