two simple errors

--- a/src/components/generalYaml/GeneralYaml.astro
+++ b/src/components/generalYaml/GeneralYaml.astro
@@ -1,6 +1,6 @@
 ---
-import {GeneralYaml} from "./index.ts";
+import {GeneralYaml as YamlGeneral} from "./index.ts";
 
 ---
 
-<GeneralYaml  client:only></GeneralYaml>
+<YamlGeneral  client:only></YamlGeneral>
