--- a/src/components/General.astro
+++ b/src/components/General.astro
@@ -29,9 +29,16 @@ import {
     type syslogSeverityType,
 } from '@schemas/evonySchemas.ts';
 
-import {attack_score, defense_score, hp_score} from './general/score';
+import { generalUseCase,
+    type generalUseCaseType
+} from '@schemas/generalsSchema.ts'
+
+
+import { buffAdverbs, buff as buff_calc} from './general/buff.ts';
+
 import { BookIcon } from '@spectrum-web-components/icons-workflow';
 
+const adverbs = buffAdverbs[generalUseCase.enum.all]
 
 const severity = {
     [syslogSeverity.enum.emerg]: () => {
@@ -58,6 +65,17 @@ const severity = {
     [syslogSeverity.enum.debug]: () => {
         return "info"
     },
+}
+
+const buffProps = {
+  dragon: true,
+  beast: false,
+  ascending: '10',
+  speciality1: 'Gold',
+  speciality2: 'Gold',
+  speciality3: 'Gold',
+  speciality4: 'Gold',
+  extraBooks: [],
 }
 
 
@@ -107,12 +125,13 @@ if (validation.success) {
     
     generalName = general.name.toLocaleLowerCase().replace(/\s+/g, '_');
     
-    [attackBuff, attack] = attack_score(general);
-    [defenseBuff, defense] = defense_score(general);
-    [hpBuff, hp] = hp_score(general);
-    attack = +((attack as number).toFixed(2));
-    defense = +((+defense).toFixed(2));
-    hp = +((+hp).toFixed(2));
+    const result = buff_calc(general, adverbs, buffProps)
+    attackBuff = result.attackBuff;
+    defenseBuff = result.defenseBuff;
+    hpBuff = result.hpBuff;
+    attack = (general.attack + (general.attack_increment as number) * 45) + (general.attack + (general.attack_increment as number) * 45 * attackBuff)
+    defense = (general.defense + (general.defense_increment as number) * 45) + (general.defense + (general.defense_increment as number) * 45 * defenseBuff)
+    hp = (general.leadership + (general.leadership_increment as number) * 45) + (general.leadership + (general.leadership_increment as number) * 45 * hpBuff)
     level = (general.display === 'summary') ? (+general.level * 45) : +general.level;
     const notes = z.array(generalNote).safeParse(general.note);
     if (notes.success) {
@@ -233,17 +252,17 @@ if (validation.success) {
           {(!ia.localeCompare("attack")) &&
             <>
               <span class="label spectrum-Body spectrum-Body--sizeS">Effective Buff:</span> {attackBuff}<br/>
-              <span class="label spectrum-Body spectrum-Body--sizeS">Score:</span> {attack}<br/>
+              <span class="label spectrum-Body spectrum-Body--sizeS">Score:</span> {attack.toFixed(2)}<br/>
             </>}
           {(!ia.localeCompare("defense")) &&
             <>
                 <span class="label spectrum-Body spectrum-Body--sizeS">Effective Buff:</span> {defenseBuff}<br/>
-                <span class="label spectrum-Body spectrum-Body--sizeS">Score:</span> {defense}<br/>
+                <span class="label spectrum-Body spectrum-Body--sizeS">Score:</span> {defense.toFixed(2)}<br/>
             </>}
           {(!ia.localeCompare("leadership")) &&
             <>
                 <span class="label spectrum-Body spectrum-Body--sizeS">Effective Buff:</span> {hpBuff}<br/>
-                <span class="label spectrum-Body spectrum-Body--sizeS">Score:</span> {hp}<br/>
+                <span class="label spectrum-Body spectrum-Body--sizeS">Score:</span> {hp.toFixed(2)}<br/>
             </>}
         </div>
       ))}
