--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -17,12 +17,67 @@ governing permissions and limitations under the License.
 @import "@spectrum-css/vars/dist/spectrum-medium.css";
 @import "@spectrum-css/page/dist/index-vars.css";
 
+/* Color Theme Swatches in Hex */
+.Cyan-600-Theme-1-1-hex { color: #0486B4; }
+.Cyan-600-Theme-1-2-hex { color: #466973; }
+.Cyan-600-Theme-1-3-hex { color: #88C0D9; }
+.Cyan-600-Theme-1-4-hex { color: #343D40; }
+.Cyan-600-Theme-1-5-hex { color: #12B0DA; }
+
+/* Color Theme Swatches in RGBA */
+.Cyan-600-Theme-1-1-rgba { color: rgba(4, 134, 180, 1); }
+.Cyan-600-Theme-1-2-rgba { color: rgba(70, 105, 115, 1); }
+.Cyan-600-Theme-1-3-rgba { color: rgba(136, 192, 217, 1); }
+.Cyan-600-Theme-1-4-rgba { color: rgba(52, 61, 64, 1); }
+.Cyan-600-Theme-1-5-rgba { color: rgba(18, 176, 218, 1); }
+
+/* Color Theme Swatches in HSLA */
+.Cyan-600-Theme-1-1-hsla { color: hsla(195, 95, 36, 1); }
+.Cyan-600-Theme-1-2-hsla { color: hsla(193, 24, 36, 1); }
+.Cyan-600-Theme-1-3-hsla { color: hsla(198, 51, 69, 1); }
+.Cyan-600-Theme-1-4-hsla { color: hsla(195, 10, 22, 1); }
+.Cyan-600-Theme-1-5-hsla { color: hsla(192, 84, 46, 1); }
+
+
+
+/* Dark mode colors. */
 :root {
-  --sl-nav-pad-x: 0px;
-  --sl-nav-pad-y: 0px;
-  --sl-content-width: 65rem;
+  --sl-nav-pad-x: 0.1px;
+  --sl-nav-pad-y: 0.1px;
+  --sl-content-width: 90%;
   --sl-sidebar-width: 15rem;
+	--sl-color-accent-low: #00273d;
+	--sl-color-accent: #12B0DA;
+	--sl-color-accent-high: #88C0D9;
+	--sl-color-white: #ffffff;
+	--sl-color-gray-1: #e7eff2;
+	--sl-color-gray-2: #bac4c8;
+	--sl-color-gray-3: #7b8f96;
+	--sl-color-gray-4: #495c62;
+	--sl-color-gray-5: #2a3b41;
+	--sl-color-gray-6: #182a2f;
+	--sl-color-black: #121a1c;
 }
+/* Light mode colors. */
+:root[data-theme='light'] {
+  --sl-nav-pad-x: 0.1px;
+  --sl-nav-pad-y: 0.1px;
+  --sl-content-width: 90%;
+  --sl-sidebar-width: 15rem;
+	--sl-color-accent-low: #b0deff;
+	--sl-color-accent: #0486B4;
+	--sl-color-accent-high: #003653;
+	--sl-color-white: #121a1c;
+	--sl-color-gray-1: #182a2f;
+	--sl-color-gray-2: #2a3b41;
+	--sl-color-gray-3: #495c62;
+	--sl-color-gray-4: #7b8f96;
+	--sl-color-gray-5: #bac4c8;
+	--sl-color-gray-6: #e7eff2;
+	--sl-color-gray-7: #f3f7f9;
+	--sl-color-black: #ffffff;
+}
+
 
 sp-theme {
   background-color: var(--spectrum-global-color-gray-100);
@@ -33,23 +88,4 @@ section.footnotes {
   border-top: 1px solid; padding-top: 1.5rem
 }
 
-/* Color Theme Swatches in Hex */
-.Cyan-600-Theme-1-1-hex { color: #14B0DA; }
-.Cyan-600-Theme-1-2-hex { color: #F8F8F8; }
-.Cyan-600-Theme-1-3-hex { color: #408038; }
-.Cyan-600-Theme-1-4-hex { color: #3F5EE1; }
-.Cyan-600-Theme-1-5-hex { color: #DE6D8D; }
 
-/* Color Theme Swatches in RGBA */
-.Cyan-600-Theme-1-1-rgba { color: rgba(20, 176, 218, 1); }
-.Cyan-600-Theme-1-2-rgba { color: rgba(248, 248, 248, 1); }
-.Cyan-600-Theme-1-3-rgba { color: rgba(64, 128, 56, 1); }
-.Cyan-600-Theme-1-4-rgba { color: rgba(63, 94, 225, 1); }
-.Cyan-600-Theme-1-5-rgba { color: rgba(222, 109, 141, 1); }
-
-/* Color Theme Swatches in HSLA */
-.Cyan-600-Theme-1-1-hsla { color: hsla(192, 83, 46, 1); }
-.Cyan-600-Theme-1-2-hsla { color: hsla(0, 0, 97, 1); }
-.Cyan-600-Theme-1-3-hsla { color: hsla(113, 39, 36, 1); }
-.Cyan-600-Theme-1-4-hsla { color: hsla(228, 72, 56, 1); }
-.Cyan-600-Theme-1-5-hsla { color: hsla(343, 63, 64, 1); }
