lost this somewhere

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -42,6 +42,7 @@ governing permissions and limitations under the License.
   --sl-nav-pad-x: 0.1px;
   --sl-nav-pad-y: 0.1px;
   --sl-content-width: 90%;
+	--sl-sidebar-width: 15rem;
 }
 
 /* Dark mode colors. */
